# parallel_progamming

./: .gitignore  CMakeLists.txt  README.md  main.cpp
exemple/: join_and_detach.h  join_threads.cpp  join_threads.h
exemple/handle_join_example/: handle_join.h
exercises/: exercise_1.cpp
src/exemple/: initial_exampel_thread.h
src/exemple/deadlock/: bank_account.cpp  bank_account.h  deadlock_exemple.cpp
src/exemple/handle_join_example/: thread_guard.h
src/exemple/hello_mutex/: hello_mutex.cpp  hello_mutex.h  mutex_lock_guard.h
src/exemple/parallel_accumulate/: parallel_accumulate.cpp
src/exemple/parameters_threads/: constructor_thread.cpp  problems_reference.cpp  tranferring_ownership_thread.cpp  utilis_methods_threads.cpp
src/exemple/unique_lock/: unique_locks_example.cpp  unique_locks_example.h
src/exercises/exercise_1/: exercise_1.cpp  exercise_1.h
src/exercises/exercise_2/: crew_mebers.cpp  crew_mebers.h
src/exercises/exercise_3/: workqueue.cpp  workqueue.h
src/exercises/stack_implementetion/: stack_thread_safe.cpp  stack_thread_safe.h
